--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-toastify": "^9.1.3",
     "react-type-animation": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
