--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@mui/material": "^5.14.2",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
-    "pdfjs-dist": "^3.4.120",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +20,7 @@
     "@zegocloud/zego-uikit-prebuilt": "^1.8.11",
     "axios": "^1.5.0",
     "font-awesome": "^4.7.0",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
@@ -58,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "worker-loader": "^3.0.8"
   }
 }
